--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 <p>The profile setting WS help you to manage the VOD profile settings.
                    view the settings keys, view one profile setting and sort profiles by age and gender.
                 </p>
-                <p>WS based on Heroku <a href="https://profile-settings.herokuapp.com">https://profile-settings.herokuapp.com</a></p>
+                <p>WS based on Heroku <a href="https://profile-setting-v2.herokuapp.com">https://profile-setting-v2.herokuapp.com</a></p>
               </p>
               <p>
                 <h3>Get Setting Options - Get method</h3>
@@ -30,7 +30,7 @@
                 }   
                 </p>
                 <p>this function not require any parameters, just use the below URL:</p>
-                <a href="https://profile-settings.herokuapp.com/getAllSettingOptions">https://profile-settings.herokuapp.com<mark>/getAllSettingOptions</mark></a>
+                <a href="https://profile-setting-v2.herokuapp.com/getAllSettingOptions">https://profile-setting-v2.herokuapp.com<mark>/getAllSettingOptions</mark></a>
                 <hr>
               </p>
               <p>
@@ -39,7 +39,7 @@
                 <p>after using this function you will receive a json file with all the user profile details.</p>
                 <p>the profile_id parameter is integer number and you must sent a known profile_id number esle you will receive an error massge:"{"error":"profile_id parameter invalid"}"</p>
                 <p>if there is no match profile to the profile_id you will receive error massge : {"error":"profile not found"}</p>
-                <a href="https://profile-settings.herokuapp.com/getUserProfileSetting">https://profile-settings.herokuapp.com/getUserProfileSetting<mark>/profile_id</mark></a>
+                <a href="https://profile-setting-v2.herokuapp.com/getUserProfileSetting">https://profile-setting-v2.herokuapp.com/getUserProfileSetting<mark>/profile_id</mark></a>
                 <hr>
               </p>
               <p>
@@ -49,7 +49,7 @@
                 <p>The second parameter is <b>payment</b> - credit card or direct debit.</p>
                 <p>if one of the parameters wrong you will receive an error massge:{"error":"payment parameter invalid"} or {"error":"age parameter invalid"}</p>
                 <p>if there is no match profile to age and payment parameters you will receive error massge : {"error":"there is no profile match to age and payment parameters"}</p>
-                <a href="https://profile-settings.herokuapp.com/getUserProfileByParams">https://profile-settings.herokuapp.com/getUserProfileByParams<mark>/age/payment</mark></a>                
+                <a href="https://profile-setting-v2.herokuapp.com/getUserProfileByParams">https://profile-setting-v2.herokuapp.com/getUserProfileByParams<mark>/age/payment</mark></a>                
                 <hr>
               </p>
               <footer>
