--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <p>This function returns sepcific profile setting by sending an profile_id parameter <b>Int </b>number.</p>
                 <p>after using this function you will receive a json file with all the user profile details.</p>
                 <p>the profile_id parameter is integer number and you must sent a known profile_id number esle you will receive an error massge:"can not exceute index/getUserProfileSetting , profile_id must be int number"</p>
+                <p>if there is no match you will receive the massage : "error:profile_id no match"</p>
                 <a href="https://profile-setting-v2.herokuapp.com/getUserProfileSetting">https://profile-setting-v2.herokuapp.com/getUserProfileSetting<mark>/profile_id</mark></a>
                 <hr>
               </p>
