--- a/index.html
+++ b/index.html
@@ -13,22 +13,9 @@
                 <h3>Get Setting Options - Get method</h3>
                 <p>This function returns all the keys of the profile setting.</p>
                 <p>after using this function you will know what is the structre of the the profile setting in the json data file.</p>
-                <p> exemple:
-                {
-                  keys: [
-                    "id",
-                    "name",
-                    "password",
-                    "city",
-                    "age",
-                    "gender",
-                    "payment"{
-                      type,
-                      owner
-                    }
-                  ]
-                }   
-                </p>
+                <p> exemple:</p>
+                <img src="https://lh5.googleusercontent.com/PweI9p96zZFJC7vOkW0Cdge-gYE4zYmZkM7CH1Pf_YwA4oRw0jqIp3ga2eBeEUOgXd-m4QkFS_FRipc=w2298-h1406" alt="ssd">  
+                
                 <p>this function not require any parameters, just use the below URL:</p>
                 <a href="https://profile-setting-v2.herokuapp.com/getAllSettingOptions">https://profile-setting-v2.herokuapp.com<mark>/getAllSettingOptions</mark></a>
                 <hr>
@@ -37,6 +24,8 @@
                 <h3>Get User setting by Id - Post method </h3>
                 <p>This function returns sepcific profile setting by sending an profile_id parameter <b>Int </b>number.</p>
                 <p>after using this function you will receive a json file with all the user profile details.</p>
+                <p>exmple:</p>
+                <img src="https://lh3.googleusercontent.com/RAYgCI7c-ryQAYkIPA4Ewb4-GUNzCyBSMQlpG3siLaPxyr91wc49Ll6pDXiCibyZlKszXCHBfx6LgjY=w2298-h1406">
                 <p>the profile_id parameter is integer number and you must sent a known profile_id number esle you will receive an error massge:"can not exceute index/getUserProfileSetting , profile_id must be int number"</p>
                 <p>if there is no match you will receive the massage : "error:profile_id no match"</p>
                 <a href="https://profile-setting-v2.herokuapp.com/getUserProfileSetting">https://profile-setting-v2.herokuapp.com/getUserProfileSetting<mark>/profile_id</mark></a>
